<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimesSquare">
    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="151dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/timessquare" />

        <TextView
            android:id="@+id/textView59"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:text="Description"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextts"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:editable="false"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:longClickable="false"
            android:scrollbars="vertical"
            android:text="@string/wtc_decs"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/textView59"
            app:layout_constraintTop_toBottomOf="@+id/imageView13"
            tools:ignore="Deprecated" />

        <TextView
            android:id="@+id/textView60"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Stay And\nRentals"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView61"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView61"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/staytsfirst"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextts"
            app:layout_constraintTop_toBottomOf="@+id/editTextts" />

        <TextView
            android:id="@+id/textView62"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/staytssecond"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView61"
            app:layout_constraintTop_toBottomOf="@+id/textView61" />

        <TextView
            android:id="@+id/textView63"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/staytsthird"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView62"
            app:layout_constraintTop_toBottomOf="@+id/textView62" />

        <TextView
            android:id="@+id/textView64"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Restaurants"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView65"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView65"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/resttsfirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView63"
            app:layout_constraintTop_toBottomOf="@+id/textView63" />

        <TextView
            android:id="@+id/textView66"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/resttssecond"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView65"
            app:layout_constraintTop_toBottomOf="@+id/textView65" />

        <TextView
            android:id="@+id/textView67"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/resttsthird"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView66"
            app:layout_constraintTop_toBottomOf="@+id/textView66" />

        <TextView
            android:id="@+id/textView68"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Best mode"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView69"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView69"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:text="Subway"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView67"
            app:layout_constraintTop_toBottomOf="@+id/textView67" />

        <TextView
            android:id="@+id/textView170"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Estimated cost"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView71"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="150$ per person per day"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView69"
            app:layout_constraintTop_toBottomOf="@+id/textView69" />
        <Button
            android:id="@+id/tssharebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="Share"
            android:onClick="tsshareChooserIntent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView71"
            tools:ignore="OnClick" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>