<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatueOfLiberty">
    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/statueofliberty" />

        <TextView
            android:id="@+id/textView46"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:text="Description"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextsol"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextsol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:editable="false"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:longClickable="false"
            android:scrollbars="vertical"
            android:text="@string/sol_decs"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/textView46"
            app:layout_constraintTop_toBottomOf="@+id/imageView12"
            tools:ignore="Deprecated" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Stay And\nRentals"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView48"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/staysolfirst"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextsol"
            app:layout_constraintTop_toBottomOf="@+id/editTextsol" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/staysolsecond"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView48"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />

        <TextView
            android:id="@+id/textView50"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/staysolthird"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView49"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Restaurants"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView52"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView52"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            android:text="@string/restsolfirst"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView50"
            app:layout_constraintTop_toBottomOf="@+id/textView50" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/restsolsecond"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView52"
            app:layout_constraintTop_toBottomOf="@+id/textView52" />

        <TextView
            android:id="@+id/textView54"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/restsolthird"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView53"
            app:layout_constraintTop_toBottomOf="@+id/textView53" />

        <TextView
            android:id="@+id/textView55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Best mode"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView56"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView56"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:text="Ferry"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView54"
            app:layout_constraintTop_toBottomOf="@+id/textView54" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Estimated cost"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView58"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView58"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="200$ per person per day"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView56"
            app:layout_constraintTop_toBottomOf="@+id/textView56" />
        <Button
            android:id="@+id/solsharebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="Share"
            android:onClick="solshareChooserIntent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView58"
            tools:ignore="OnClick" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>